--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "author": "Mihai Ionut Vilcu",
   "license": "MIT",
   "devDependencies": {
+    "del": "^1.1.0",
     "gulp": "3.8.10",
     "gulp-autoprefixer": "1.0.1",
     "gulp-connect": "2.2.0",
