--- a/package.json
+++ b/package.json
@@ -8,17 +8,20 @@
   "author": "Mihai Ionut Vilcu",
   "license": "MIT",
   "devDependencies": {
-    "del": "^1.1.0",
+    "del": "1.1.0",
     "gulp": "3.8.10",
     "gulp-autoprefixer": "1.0.1",
     "gulp-connect": "2.2.0",
     "gulp-data": "1.0.2",
     "gulp-filter": "1.0.2",
+    "gulp-minify-css": "0.3.11",
+    "gulp-rename": "1.2.0",
     "gulp-ruby-sass": "0.7.1",
     "gulp-sourcemaps": "1.2.8",
     "gulp-template": "1.1.1",
+    "gulp-uglify": "1.0.2",
     "gulp-usemin": "0.3.8",
-    "gulp-util": "^3.0.1",
+    "gulp-util": "3.0.1",
     "lodash": "2.4.1",
     "open": "0.0.5"
   }
